--- a/src/Context/App.css
+++ b/src/Context/App.css
@@ -12,8 +12,28 @@ html,body{
     height: 100%;
 }
 
-.button-wrapper{
+.button-wrapper-light{
     display:flex;
     justify-content: flex-end;
     height: 25px;
+    padding: 25px;
+    border-bottom: 1px solid rgb(99,98,98);
+    background: #ffffff;
+}
+
+.button-wrapper-dark{
+    display:flex;
+    justify-content: flex-end;
+    height: 25px;
+    padding: 25px;
+    border-bottom: 1px solid rgb(99,98,98);
+    background: #c2bebe;
+}
+
+.page-content-wrapper{
+    height: calc(100% - 50px);
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
